tests/snapshots/insert_operations_test__o_with_tabs_indentation.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:12
Lines: 4

Buffer:
start
		indented
		same inden[t]
end
